welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:16: error: value estFaceMur is not a member of Unit
possible cause: maybe a semicolon is missing before `value estFaceMur'?
}   estFaceMur()
    ^